<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/ic_books"
        android:title="@string/title_books" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_support"
        android:title="@string/title_basket" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/ic_support"
        android:title="@string/title_support" />

</menu>