<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ir.yeksaco.jahesh.ui.fragments.content.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="ir.yeksaco.jahesh.ui.fragments.books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="ir.yeksaco.jahesh.ui.fragments.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ir.yeksaco.jahesh.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_support"
        android:name="ir.yeksaco.jahesh.ui.fragments.support.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_support" />


</navigation>