<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="76dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:backgroundTint="#F4F0FF"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_delete_basket"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_deleted" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:id="@+id/tv_basket_content_title"
                    android:fontFamily="@font/yekan_bakh_light"
                    android:gravity="right|center_vertical"
                    android:text="@string/moghadame"
                    android:textColor="#131313"
                    android:textSize="14dp"
                    tools:ignore="RtlHardcoded,SpUsage">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:id="@+id/tv_basket_content_amount"
                    android:fontFamily="@font/yekan_bakh_light"
                    android:gravity="right|center_vertical"
                    android:text="@string/amount"
                    android:textColor="#131313"
                    android:textSize="12dp"
                    tools:ignore="RtlHardcoded,SpUsage">

                </TextView>
            </LinearLayout>


                <ImageView
                    android:id="@+id/img_menu_type"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_book_open" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>