<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ui.activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_round" />


    <LinearLayout
        android:id="@+id/ly_pinEntery"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pin_I"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/border"
            android:fontFamily="@font/yekanbakh_regular"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pin_II"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/border"
            android:fontFamily="@font/yekanbakh_regular"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pin_III"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/border"
            android:fontFamily="@font/yekanbakh_regular"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pin_IV"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/border"
            android:fontFamily="@font/yekanbakh_regular"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pin_V"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/border"
            android:fontFamily="@font/yekanbakh_regular"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:singleLine="true"
            tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />
    </LinearLayout>

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/txt_pin_entry2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:cursorVisible="false"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:digits="1234567890"
        android:inputType="number"
        android:layoutDirection="ltr"
        android:maxLength="5"
        android:textIsSelectable="false"
        android:textSize="20dp"
        android:fontFamily="@font/iransans_dn_fa_light"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:pinAnimationType="popIn"
        app:pinBackgroundDrawable="@drawable/border"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_change_numebr"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/iransans_dn_fa_m"
        android:gravity="center"
        android:text="@string/change_number"
        android:textColor="@color/gray_70"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pin_entry2"
        tools:ignore="SpUsage,TextSizeCheck" />

    <ImageView
        android:id="@+id/img_change_numebr"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_backspace"
        app:layout_constraintBottom_toBottomOf="@+id/txt_change_numebr"
        app:layout_constraintEnd_toStartOf="@+id/txt_change_numebr"
        app:layout_constraintTop_toTopOf="@+id/txt_change_numebr" />

    <ProgressBar
        android:id="@+id/Prg_remain_time"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:indeterminateDrawable="@drawable/progress"
        android:indeterminateOnly="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/progress"
        android:rotation="-90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_change_numebr" />

    <TextView
        android:id="@+id/txt_remain_time"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:fontFamily="@font/yekanbakh_regular"
        android:gravity="center"
        android:text="@string/ramaining_time"
        android:textColor="@color/gray"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Prg_remain_time"
        app:layout_constraintEnd_toEndOf="@+id/Prg_remain_time"
        app:layout_constraintStart_toStartOf="@+id/Prg_remain_time"
        app:layout_constraintTop_toTopOf="@+id/Prg_remain_time"
        tools:ignore="SpUsage,TextSizeCheck" />


    <TextView
        android:id="@+id/txt_resend_code"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/yekanbakh_regular"
        android:gravity="center"
        android:text="@string/resend_code"
        android:textColor="@color/purple_300"
        android:textSize="16dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Prg_remain_time"
        tools:ignore="SpUsage,TextSizeCheck" />

    <!--    <TextView-->
    <!--        android:id="@+id/txt_remain_text"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="36dp"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:fontFamily="@font/yekanbakh_regular"-->
    <!--        android:gravity="center"-->
    <!--        android:text="@string/ramaining"-->
    <!--        android:textColor="@color/gray"-->
    <!--        android:textSize="16dp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/Prg_remain_time"-->
    <!--        tools:ignore="SpUsage,TextSizeCheck" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify"
        android:layout_width="356dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_color"
        android:enabled="true"
        android:fontFamily="@font/yekanbakh_regular"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resend_code"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cly_wating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background=" #D1ECF2F0"
        android:translationZ="1000dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_waiting_logo"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_marginTop="136dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_round" />

        <TextView
            android:id="@+id/txt_wait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/yekanbakh_regular"
            android:gravity="center"
            android:text="@string/wait"
            android:textColor="@color/black_text"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/img_waiting_logo"
            tools:ignore="SpUsage,TextSizeCheck"
            tools:layout_editor_absoluteX="0dp" />

        <ProgressBar
            android:id="@+id/Prg_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="110dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress"
            android:progressDrawable="@drawable/progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>